freest/test/prog/Valid/Functional/SemiAsSection/SemiAsSection.fst
module SemiAsSection where

main : Int
main = ((;) @Char @Int) 'a' 2
