freest/test/prog/Invalid/Parsing/PrefixListCons/PrefixListCons.fst
module PrefixTupleTypeCons where

foo : [] Int
foo = [0] @Int
